[package]
name = "isaribi"
version = "0.1.0"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2018"
description = "Styled components for Kagura"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "front-end", "kagura"]
categories = ["gui", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2.74"
regex = "1"

[dependencies.web-sys]
version = "^0.3.51"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    "HtmlStyleElement",
    "CssRuleList",
    "CssStyleSheet",
    "Window"
]
