[package]
name = "isaribi"
version = "0.2.4"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2021"
description = "Styled components for Yew, Kagura &c."
repository = "https://github.com/SoundRabbit/Isaribi"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "front-end", "kagura", "yew"]
categories = ["gui", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "^0.2.74"
regex = "1"

[dependencies.web-sys]
version = "^0.3.51"
features = [
    "console",
    "Document",
    "Element",
    "HtmlCollection",
    "HtmlElement",
    "HtmlStyleElement",
    "CssRuleList",
    "CssStyleSheet",
    "Window"
]
