[package]
name = "isaribi-test"
version = "0.1.0"
authors = ["SoundRabbit <soundrabbitstd@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kagura="^0.8"
wasm-bindgen="^0.2"

[dependencies.isaribi]
path="../"
